src/objects/Time_Zone_Field_Mappings_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Name field should be in the following format: Object_API_Name__c;Field_API_Name__c</description>
    <fields>
        <fullName>Field_API_Name_MERC__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name_MERC__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Field_To_Stamp_MERC__c</fullName>
        <label>Static Field To Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Field_API_Name_MERC__c</fullName>
        <label>Time Zone Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Time Zone Field Mappings</label>
</CustomObject>